[gd_scene load_steps=7 format=3 uid="uid://sjpr02b42usg"]

[ext_resource type="Script" uid="uid://ckl3kfm0u0e3j" path="res://scenes/mainMenuScenes/gameModeSel.gd" id="1_c4bqn"]
[ext_resource type="PackedScene" uid="uid://c8iabuhhf3o4e" path="res://scenes/mainMenuScenes/loadingScreen.tscn" id="2_sd3lv"]
[ext_resource type="Shader" uid="uid://ca4ymckm1e8si" path="res://scenes/mainMenuScenes/blur.gdshader" id="2_ysedd"]
[ext_resource type="AudioStream" uid="uid://8bv52blhekri" path="res://assets/sfx/decide.ogg" id="4_ixfki"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ixfki"]
shader = ExtResource("2_ysedd")
shader_parameter/lod = 3.50000016625

[sub_resource type="LabelSettings" id="LabelSettings_7aqff"]
font_size = 40
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.5019608)
shadow_offset = Vector2(3, 3)

[node name="GameModeSel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4bqn")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ixfki")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3764706)

[node name="TransparentBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -225.0
offset_right = 300.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 20.0
offset_right = 29.0
offset_bottom = 38.0
grow_horizontal = 2
text = "Select Difficulty"
label_settings = SubResource("LabelSettings_7aqff")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.5
offset_top = -155.0
offset_right = 282.5
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiffContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Easy" type="Button" parent="Panel/MarginContainer/DiffContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.1882353, 1, 0.3764706, 1)
theme_override_colors/font_focus_color = Color(0.1882353, 1, 0.3764706, 1)
theme_override_colors/font_pressed_color = Color(0.1882353, 1, 0.3764706, 1)
theme_override_colors/font_hover_color = Color(0.1882353, 1, 0.3764706, 1)
theme_override_colors/font_hover_pressed_color = Color(0.1882353, 1, 0.3764706, 1)
theme_override_colors/font_disabled_color = Color(0.19, 1, 0.379, 0.5019608)
theme_override_font_sizes/font_size = 24
text = "Easy"

[node name="Normal" type="Button" parent="Panel/MarginContainer/DiffContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.6431373, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.6431373, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6431373, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.6431373, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0.6431373, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0.6509804, 1, 0.5019608)
theme_override_font_sizes/font_size = 24
text = "Normal"

[node name="Hard" type="Button" parent="Panel/MarginContainer/DiffContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2509804, 0.2509804, 1)
theme_override_colors/font_focus_color = Color(1, 0.2509804, 0.2509804, 1)
theme_override_colors/font_pressed_color = Color(1, 0.2509804, 0.2509804, 1)
theme_override_colors/font_hover_color = Color(1, 0.2509804, 0.2509804, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.2509804, 0.2509804, 1)
theme_override_colors/font_disabled_color = Color(1, 0.25, 0.25, 0.5019608)
theme_override_font_sizes/font_size = 24
text = "Hard"

[node name="Lunatic" type="Button" parent="Panel/MarginContainer/DiffContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92156863, 0.3764706, 1, 1)
theme_override_colors/font_focus_color = Color(0.92156863, 0.3764706, 1, 1)
theme_override_colors/font_pressed_color = Color(0.92156863, 0.3764706, 1, 1)
theme_override_colors/font_hover_color = Color(0.92156863, 0.3764706, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.92156863, 0.3764706, 1, 1)
theme_override_colors/font_disabled_color = Color(0.9173334, 0.38, 1, 0.5019608)
theme_override_font_sizes/font_size = 24
text = "Lunatic"

[node name="CurrentPlayer" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 17.5
offset_top = 84.0
offset_right = 582.5
offset_bottom = 127.0
theme_override_colors/font_color = Color(1, 0.8333334, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5019608)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 18
text = "You are currently playing as a Guest.
Scores will only be saved locally."
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="DifficultyDesc" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 324.0
offset_right = 583.0
offset_bottom = 367.0
theme_override_colors/font_color = Color(0.65, 0.65, 0.65, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5019608)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -55.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="LoadingScreen" parent="." instance=ExtResource("2_sd3lv")]
visible = false

[node name="SfxDecide" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ixfki")
bus = &"SFX"

[connection signal="mouse_entered" from="Panel/MarginContainer/DiffContainer/Easy" to="." method="_on_easy_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/DiffContainer/Easy" to="." method="_on_easy_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/DiffContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/DiffContainer/Normal" to="." method="_on_normal_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/DiffContainer/Normal" to="." method="_on_normal_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/DiffContainer/Normal" to="." method="_on_norm_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/DiffContainer/Hard" to="." method="_on_hard_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/DiffContainer/Hard" to="." method="_on_hard_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/DiffContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/DiffContainer/Lunatic" to="." method="_on_lunatic_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/DiffContainer/Lunatic" to="." method="_on_lunatic_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/DiffContainer/Lunatic" to="." method="_on_luna_pressed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
